--- a/src/app/modules/party/page/party.component.scss
+++ b/src/app/modules/party/page/party.component.scss
@@ -74,10 +74,19 @@
 }
 
 .no-result {
-  font-size: 3rem;
+  font-size: 2rem;
   grid-column: 1 / -1;
 
   @media only screen and (max-width: $bp-small) {
     line-height: 4rem;
   }
+}
+
+.no-politician {
+  grid-column: 1 / -1;
+
+ display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
 }
