Actions for ppp as dropdown menu

--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -26,7 +26,7 @@
           <div class="party__logo-container">
             <img [src]="party.imageUrl" alt="party icon" class="party-icon" />
           </div>
-          <div matTooltipPosition="above" [matTooltip]="party.name" class="party__name">{{
+          <div matTooltipPosition="after" [matTooltip]="party.name" class="party__name">{{
             party.name
           }}</div>
         </div>
