--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -2,6 +2,36 @@
   <ng-container *ngIf="politicalParty$ | async as party">
     <div class="party">
       <h1 class="party__heading">{{ party.name }}</h1>
+      <div class="party__act">
+        <button
+          color="primary"
+          mat-raised-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Example icon-button with a menu">
+          {{ 'actions' | translate }}
+          <mat-icon>settings</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button
+            [routerLink]="['/political-party/detail', party.id, 'edit']"
+            mat-menu-item
+            class="button-add">
+            <mat-icon color="primary">edit</mat-icon>
+            {{ 'edit-party' | translate }}
+          </button>
+          <button mat-menu-item class="button-add" (click)="openDialogAndRemoveParty()">
+            <mat-icon color="primary">delete_forever</mat-icon>
+            {{ 'remove-party' | translate }}
+          </button>
+          <button
+            [routerLink]="['/political-party/detail', party.id, 'add-politician']"
+            mat-menu-item
+            class="button-add">
+            {{ 'politician-add' | translate }}
+            <mat-icon color="primary">add</mat-icon>
+          </button>
+        </mat-menu>
+      </div>
       <div class="party__actions">
         <div class="party__actions__search">
           <mat-form-field appearance="outline">
@@ -10,23 +40,18 @@
             <mat-icon color="primary" matSuffix>search</mat-icon>
           </mat-form-field>
         </div>
-        <div class="party__actions__admin-buttons">
-          <button
-            [routerLink]="['/political-party/detail', party.id, 'edit']"
-            mat-raised-button
-            color="primary"
-            class="button-add">
-            <mat-icon>edit</mat-icon>
-            {{ 'edit-party' | translate }}
-          </button>
-          <button
-            mat-raised-button
-            color="primary"
-            class="button-add"
-            (click)="openDialogAndRemoveParty()">
-            <mat-icon>delete_forever</mat-icon>
-            {{ 'remove-party' | translate }}
-          </button>
+      </div>
+    </div>
+    <ng-container *ngIf="politicians$ | async as politicians">
+      <div class="politicians">
+        <app-politician
+          *ngFor="let politician of politicians | filterPoliticians : input.value"
+          [politician]="politician"></app-politician>
+        <ng-container *ngIf="(politiciansCount | async) === 0 && politicians.length">
+          <span class="no-result">{{ 'no-result' | translate }}</span>
+        </ng-container>
+        <div class="no-politician" *ngIf="(politiciansCount | async) === 0 && !politicians.length">
+          <span class="no-result">{{ 'no-politicians' | translate }}</span>
           <button
             [routerLink]="['/political-party/detail', party.id, 'add-politician']"
             mat-raised-button
@@ -36,16 +61,6 @@
             <mat-icon>add</mat-icon>
           </button>
         </div>
-      </div>
-    </div>
-    <ng-container *ngIf="politicians$ | async as politicians">
-      <div class="politicians">
-        <app-politician
-          *ngFor="let politician of politicians | filterPoliticians : input.value"
-          [politician]="politician"></app-politician>
-        <ng-container *ngIf="(politiciansCount | async) === 0">
-          <span class="no-result">{{ 'no-result' | translate }}</span>
-        </ng-container>
       </div>
     </ng-container>
   </ng-container>
