--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -2,6 +2,37 @@
   <ng-container *ngIf="politicalParty$ | async as party">
     <div class="party">
       <h1 class="party__heading">{{ party.name }}</h1>
+      <div class="party__act">
+        <button
+          *ngIf="hasPermission$ | async"
+          color="primary"
+          mat-raised-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Example icon-button with a menu">
+          {{ 'actions' | translate }}
+          <mat-icon>settings</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button
+            [routerLink]="['/political-party/detail', party.id, 'edit']"
+            mat-menu-item
+            class="button-add">
+            <mat-icon color="primary">edit</mat-icon>
+            {{ 'edit-party' | translate }}
+          </button>
+          <button mat-menu-item class="button-add" (click)="openDialogAndRemoveParty()">
+            <mat-icon color="primary">delete_forever</mat-icon>
+            {{ 'remove-party' | translate }}
+          </button>
+          <button
+            [routerLink]="['/political-party/detail', party.id, 'add-politician']"
+            mat-menu-item
+            class="button-add">
+            {{ 'politician-add' | translate }}
+            <mat-icon color="primary">add</mat-icon>
+          </button>
+        </mat-menu>
+      </div>
       <div class="party__actions">
         <div class="party__actions__search">
           <mat-form-field appearance="outline">
@@ -9,32 +40,6 @@
             <input type="text" #input matInput />
             <mat-icon color="primary" matSuffix>search</mat-icon>
           </mat-form-field>
-        </div>
-        <div *ngIf="hasPermission$ | async" class="party__actions__admin-buttons">
-          <button
-            [routerLink]="['/political-party/detail', party.id, 'edit']"
-            mat-raised-button
-            color="primary"
-            class="button-add">
-            <mat-icon>edit</mat-icon>
-            {{ 'edit-party' | translate }}
-          </button>
-          <button
-            mat-raised-button
-            color="primary"
-            class="button-add"
-            (click)="openDialogAndRemoveParty()">
-            <mat-icon>delete_forever</mat-icon>
-            {{ 'remove-party' | translate }}
-          </button>
-          <button
-            [routerLink]="['/political-party/detail', party.id, 'add-politician']"
-            mat-raised-button
-            color="primary"
-            class="button-add">
-            {{ 'politician-add' | translate }}
-            <mat-icon>add</mat-icon>
-          </button>
         </div>
       </div>
     </div>
