--- a/src/app/modules/party/page/party.component.scss
+++ b/src/app/modules/party/page/party.component.scss
@@ -4,6 +4,11 @@
   height: 100%;
   grid-column: center-start / center-end;
 
+  &__act {
+    display: flex;
+    margin-bottom: 2rem;
+  }
+
   &__heading {
     font-size: 3rem;
     text-align: center;
@@ -23,6 +28,7 @@
 
   &__actions {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     padding-bottom: 3rem;
     gap: 1.5rem;
@@ -37,12 +43,6 @@
       mat-form-field {
         width: 100% !important;
       }
-    }
-
-    &__admin-buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem 0;
     }
   }
 
