--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -1,33 +1,43 @@
 <section class="container">
   <ng-container *ngIf="politicalParty$ | async as party">
     <div class="party">
-      <h1 class="party__heading">{{ party.name }}</h1>
-      <div class="party__actions">
-        <div class="party__actions__search">
-          <mat-form-field appearance="outline">
-            <mat-label>{{ 'politician-search' | translate }}</mat-label>
-            <input type="text" #input matInput />
-            <mat-icon color="primary" matSuffix>search</mat-icon>
-          </mat-form-field>
+      <h1 class="party__heading"
+        >{{ party.name }}
+        <app-party-actions
+          *ngIf="hasPermission$ | async"
+          class="party__act__actions"
+          [partyId]="party.id!"></app-party-actions>
+      </h1>
+      <div class="party__act">
+        <div class="party__act__search">
+          <button
+            color="primary"
+            (click)="toggleSearch()"
+            [matTooltip]="'politician-search' | translate"
+            mat-icon-button>
+            <mat-icon>search</mat-icon>
+          </button>
+          <div>
+            <mat-form-field [@searchAnimation]="searchState" appearance="outline">
+              <mat-label>{{ 'politician-search' | translate }}</mat-label>
+              <input type="text" #partySearchInput matInput />
+            </mat-form-field>
+          </div>
         </div>
-        <div *ngIf="hasPermission$ | async" class="party__actions__admin-buttons">
+      </div>
+    </div>
+    <ng-container *ngIf="politicians$ | async as politicians">
+      <div class="politicians">
+        <app-politician
+          *ngFor="let politician of politicians | filterPoliticians : partySearchInput?.value ?? ''"
+          [politician]="politician"></app-politician>
+        <ng-container *ngIf="(politiciansCount | async) === 0 && politicians.length">
+          <span class="no-result">{{ 'no-result' | translate }}</span>
+        </ng-container>
+        <div class="no-politician" *ngIf="(politiciansCount | async) === 0 && !politicians.length">
+          <span class="no-result">{{ 'no-politicians' | translate }}</span>
           <button
-            [routerLink]="['/political-party/detail', party.id, 'edit']"
-            mat-raised-button
-            color="primary"
-            class="button-add">
-            <mat-icon>edit</mat-icon>
-            {{ 'edit-party' | translate }}
-          </button>
-          <button
-            mat-raised-button
-            color="primary"
-            class="button-add"
-            (click)="openDialogAndRemoveParty()">
-            <mat-icon>delete_forever</mat-icon>
-            {{ 'remove-party' | translate }}
-          </button>
-          <button
+            *ngIf="hasPermission$ | async"
             [routerLink]="['/political-party/detail', party.id, 'add-politician']"
             mat-raised-button
             color="primary"
@@ -36,16 +46,6 @@
             <mat-icon>add</mat-icon>
           </button>
         </div>
-      </div>
-    </div>
-    <ng-container *ngIf="politicians$ | async as politicians">
-      <div class="politicians">
-        <app-politician
-          *ngFor="let politician of politicians | filterPoliticians : input.value"
-          [politician]="politician"></app-politician>
-        <ng-container *ngIf="(politiciansCount | async) === 0">
-          <span class="no-result">{{ 'no-result' | translate }}</span>
-        </ng-container>
       </div>
     </ng-container>
   </ng-container>
