--- a/src/app/modules/party/page/party.component.scss
+++ b/src/app/modules/party/page/party.component.scss
@@ -4,10 +4,28 @@
   height: 100%;
   grid-column: center-start / center-end;
 
+  &__act {
+    display: flex;
+    flex-direction: column;
+
+    &__actions {
+      align-self: center;
+    }
+
+    &__search {
+      display: flex;
+      gap: 1rem;
+    }
+
+    @media only screen and (max-width: $bp-mobile) {
+      justify-content: center;
+    }
+  }
+
   &__heading {
     font-size: 3rem;
     text-align: center;
-    padding: 1rem 0 2rem 0;
+    padding: 1rem 0 0 0;
     letter-spacing: 0.1rem;
     word-spacing: 0.5rem;
     text-transform: uppercase;
@@ -23,7 +41,8 @@
 
   &__actions {
     display: flex;
-    justify-content: space-between;
+    //align-items: center;
+    //justify-content: space-between;
     padding-bottom: 3rem;
     gap: 1.5rem;
 
@@ -33,16 +52,10 @@
     }
 
     &__search {
-      align-self: center;
-      mat-form-field {
-        width: 100% !important;
-      }
-    }
-
-    &__admin-buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem 0;
+      //align-self: center;
+      //mat-form-field {
+      //  width: 100% !important;
+      //}
     }
   }
 
@@ -74,10 +87,27 @@
 }
 
 .no-result {
-  font-size: 3rem;
+  font-size: 2rem;
   grid-column: 1 / -1;
 
   @media only screen and (max-width: $bp-small) {
     line-height: 4rem;
   }
+}
+
+.no-politician {
+  grid-column: 1 / -1;
+
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
+}
+
+.visible-shit {
+  visibility: visible;
+}
+
+.invisible-shit {
+  visibility: hidden;
 }
