--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import './styles/variables.scss';
+@import 'styles/variables';
 
 *,
 *::before,
@@ -35,10 +35,6 @@ app-sidenav {
 
   & > mat-sidenav-container.mat-drawer-container {
     height: calc(100vh - 5rem);
-  }
-
-  mat-sidenav .mat-mdc-list-base {
-    width: $sidenav-width !important;
   }
 
   .mat-drawer {
