Add party quick actions to sidenav

--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -3,7 +3,10 @@
     <div class="party">
       <h1 class="party__heading"
         >{{ party.name }}
-        <app-party-actions class="party__act__actions" [partyId]="party.id!"></app-party-actions>
+        <app-party-actions
+          class="party__act__actions"
+          [iconName]="'settings'"
+          [partyId]="party.id!"></app-party-actions>
       </h1>
       <div class="party__act">
         <div class="party__act__search">
