--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -29,6 +29,10 @@
           <div matTooltipPosition="after" [matTooltip]="party.name" class="party__name">{{
             party.name
           }}</div>
+          <app-party-actions
+            class="party__actions"
+            [partyId]="party.id!"
+            [disableTooltip]="true"></app-party-actions>
         </div>
       </mat-list-item>
       <mat-list-item *ngIf="(partiesCount | async) === 0">
