Improve political party UX/UI + add utils scss

--- a/src/app/modules/party/page/politician/politician.component.scss
+++ b/src/app/modules/party/page/politician/politician.component.scss
@@ -7,7 +7,7 @@
 
   &__image {
     display: block !important;
-    height: 200px !important;
+    height: 30rem !important;
     object-fit: cover;
   }
 
