--- a/src/app/modules/home/page/home/news-detail/news-detail.component.html
+++ b/src/app/modules/home/page/home/news-detail/news-detail.component.html
@@ -3,7 +3,7 @@
     <ng-container *ngIf="newsDetail$ | async as news">
       <div class="news">
         <div class="news__header__box">
-          <h1 class="news__header__box__heading">{{ news.heading }}</h1>
+          <h1 class="heading">{{ news.heading }}</h1>
           <p class="news__header__box__date">{{ news.publishDate | dateFormatter }}</p>
         </div>
         <div class="news__image">
