--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -1,13 +1,15 @@
 <section class="container">
   <ng-container *ngIf="politicalParty$ | async as party">
     <div class="party">
-      <h1 class="party__heading"
+      <h1 class="heading"
         >{{ party.name }}
         <app-party-actions
           class="party__act__actions"
           [iconName]="'settings'"
           [partyId]="party.id!"></app-party-actions>
       </h1>
+      <img class="party__logo" alt="party logo" [src]="party.imageUrl" />
+      <h2 class="subheading">{{ 'politicians' | translate }}</h2>
       <div class="party__act">
         <div class="party__act__search">
           <button
