move scss variables + shorten variables import

--- a/src/app/modules/home/page/home/home.component.scss
+++ b/src/app/modules/home/page/home/home.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/variables.scss';
+@import 'variables';
 
 .news_container {
   grid-column: center-start / center-end;
