refactor design architecture to 7-1 Sass pattern

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,9 +1,9 @@
-@import 'variables';
+@import 'abstracts/variables';
 
 .navbar {
   display: flex;
   justify-content: space-between;
-  height: 5rem;
+  height: $navbar-height;
 
   &__politi {
     text-decoration: none;
