--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,4 @@
-//TODO Material typography is interfering with h1-hn styles, fix
+//TODO coliding with material typography, redo in future
 .heading {
   font-size: 3rem !important;
   text-align: center !important;
