--- a/src/styles/themes/_light-theme.scss
+++ b/src/styles/themes/_light-theme.scss
@@ -1,4 +1,4 @@
-@use '@angular/material' as mat;
+@use '../../../node_modules/@angular/material/index' as mat;
 
 @include mat.all-component-typographies();
 @include mat.core();
