--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables.scss';
+@import 'abstracts/variables';
 
 .party {
   display: flex;
@@ -17,6 +17,10 @@
       min-width: 4rem;
       object-fit: contain;
     }
+  }
+
+  &__actions {
+    margin-left: auto;
   }
 
   &__name {
