--- a/src/app/modules/home/page/home/news-detail/news-detail.component.scss
+++ b/src/app/modules/home/page/home/news-detail/news-detail.component.scss
@@ -1,5 +1,3 @@
-@import 'src/styles/variables';
-
 .news {
   display: flex;
   flex-direction: column;
@@ -19,20 +17,6 @@
       justify-content: center;
       position: relative;
       margin-bottom: 1.5rem;
-
-      &__heading {
-        align-self: center;
-        justify-self: center;
-        font-size: 3.5rem;
-        letter-spacing: 0.1rem;
-        line-height: 4rem;
-        margin: 1rem 0;
-        color: #000;
-
-        @media only screen and (max-width: $bp-small) {
-          font-size: 2rem;
-        }
-      }
 
       &__date {
         text-align: right;
@@ -54,5 +38,7 @@
   &__content {
     font-size: 1.35rem;
     margin-top: 2rem;
+    text-align: justify;
+    hyphens: auto;
   }
 }
