--- a/src/app/modules/party/page/politician/politician.component.scss
+++ b/src/app/modules/party/page/politician/politician.component.scss
@@ -1,5 +1,3 @@
-@import '../../../../../styles/variables.scss';
-
 .politician-card {
   &__title {
     margin-right: 3rem;
@@ -7,7 +5,7 @@
 
   &__image {
     display: block !important;
-    height: 200px !important;
+    height: 30rem !important;
     object-fit: cover;
   }
 
