Improve sidebar/navbar UX/UI

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -5,16 +5,6 @@
   justify-content: space-between;
   height: $navbar-height;
 
-  &__politi {
-    text-decoration: none;
-    color: #fff;
-    transition: all 0.25s;
-
-    &:hover {
-      color: rgb(225, 220, 220);
-    }
-  }
-
   &__left {
     display: flex;
     align-items: center;
@@ -67,4 +57,11 @@
   scale: 1.5;
   cursor: pointer;
   margin-right: 1rem;
+}
+
+.sticky{
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  z-index: 10;
 }
