--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,3 +11,7 @@ $bp-xlarge: 103.125em; //1650px
 $main-color: #2979ff;
 
 $navbar-height: 5rem;
+
+$text-l: 3.5rem;
+$text-m: 2rem;
+$text-s: 1.2rem;
