--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -3,8 +3,6 @@
 .party {
   display: flex;
   align-items: center;
-  font-weight: 400;
-  font-size: 1.5rem;
 
   &__logo-container {
     margin-right: 0.5rem;
@@ -14,7 +12,7 @@
     img {
       width: 100%;
       height: 100%;
-      min-width: 4rem;
+      max-width: 4rem;
       object-fit: contain;
     }
   }
@@ -36,14 +34,6 @@
     @media only screen and (max-width: $bp-mobile) {
       max-width: $sidenav-text-width;
     }
-  }
-}
-
-.navitem {
-  span {
-    font-weight: 400;
-    font-size: 1.5rem;
-    justify-content: center;
   }
 }
 
@@ -87,5 +77,26 @@ mat-icon {
 
   span {
     font-size: 2rem;
+  }
+}
+
+.politi {
+  height: $navbar-height;
+  font-size: $text-m;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  span {
+    text-decoration: none;
+    color: #000;
+    transition: all 0.25s;
+    letter-spacing: .2rem;
+    font-weight: 500;
+
+    &:hover {
+      cursor: default;
+    }
   }
 }
