--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -4,7 +4,7 @@
     [opened]="!mobileQuery.matches"
     #snav
     [mode]="mobileQuery.matches ? 'over' : 'side'"
-    [fixedInViewport]="mobileQuery.matches">
+    [fixedInViewport]="true">
     <div class="politi">
       <span>Politi.cz</span>
     </div>
