--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -68,7 +68,7 @@
     </span>
   </mat-sidenav>
 
-  <mat-sidenav-content>
+  <mat-sidenav-content role="main">
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
