--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -92,7 +92,7 @@ mat-icon {
     text-decoration: none;
     color: #000;
     transition: all 0.25s;
-    letter-spacing: .2rem;
+    letter-spacing: 0.2rem;
     font-weight: 500;
 
     &:hover {
