--- a/src/main.scss
+++ b/src/main.scss
@@ -1,11 +1,11 @@
 @import 'abstracts/variables';
 
-@import "base/reset";
-@import "base/typography";
+@import 'base/reset';
+@import 'base/typography';
 
-@import "layout/forms";
-@import "layout/grid";
+@import 'layout/forms';
+@import 'layout/grid';
 
-@import "themes/light-theme";
+@import 'themes/light-theme';
 
-@import "shame";
+@import 'shame';
