--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -52,3 +52,16 @@
     scale: (1.5);
   }
 }
+
+.login-icon {
+  scale: 1.5;
+  cursor: pointer;
+  margin-right: 1rem;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  z-index: 10;
+}
