--- a/src/app/modules/home/page/home/home.component.html
+++ b/src/app/modules/home/page/home/home.component.html
@@ -1,9 +1,9 @@
 <section class="container">
   <div class="news__actions">
-    <!--    <button mat-raised-button color="primary" class="button-add">-->
-    <!--      {{ 'news-add' | translate }}-->
-    <!--      <mat-icon>add</mat-icon>-->
-    <!--    </button>-->
+    <button mat-raised-button color="primary" class="button-add" [routerLink]="'/news/add'">
+      {{ 'news-add' | translate }}
+      <mat-icon>add</mat-icon>
+    </button>
   </div>
   <div class="news_container">
     <ng-container *ngFor="let news of newsList$ | async">
