--- a/src/app/modules/home/page/home/news/news.component.scss
+++ b/src/app/modules/home/page/home/news/news.component.scss
@@ -34,6 +34,7 @@
     grid-template-rows: 2.5rem;
     gap: 1.5rem 0;
     align-items: center;
+    width: 100%;
 
     h3 {
       font-size: 1.5rem;
