Refactor hasPermission handling

--- a/src/app/modules/home/page/home/news/news.component.html
+++ b/src/app/modules/home/page/home/news/news.component.html
@@ -1,5 +1,6 @@
 <div class="news" (click)="navigateToDetail(news.id)">
   <app-admin-quick-menu-actions
+    *ngIf="hasPermission$ | async"
     (actionClickEvt)="handleActionEvent($event)"></app-admin-quick-menu-actions>
   <img [src]="news.imageUrl" alt="politician image" />
   <div class="news__text">
