--- a/src/app/modules/home/page/home/home.component.html
+++ b/src/app/modules/home/page/home/home.component.html
@@ -1,7 +1,11 @@
 <section class="container">
   <div class="news__actions">
-    <!--    TODO permissions-->
-    <button mat-raised-button color="primary" class="button-add" [routerLink]="'/news/add'">
+    <button
+      *ngIf="hasPermission$ | async"
+      mat-raised-button
+      color="primary"
+      class="button-add"
+      [routerLink]="'/news/add'">
       {{ 'news-add' | translate }}
       <mat-icon>add</mat-icon>
     </button>
