--- a/src/app/modules/party/forms/party-form/party-form.component.html
+++ b/src/app/modules/party/forms/party-form/party-form.component.html
@@ -108,12 +108,8 @@
       </button>
     </div>
   </ng-container>
-  <div class="form-footer span-12">
-    <button (click)="cancel()" type="button" mat-raised-button class="button-add">
-      {{ 'back' | translate }}
-    </button>
-    <button type="submit" mat-raised-button color="primary" class="button-add">
-      {{ party ? ('update' | translate) : ('create' | translate) }}
-    </button>
-  </div>
+  <app-form-actions
+    class="span-12"
+    [createForm]="!!party"
+    (backEvent)="cancel()"></app-form-actions>
 </form>
